--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Development</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="/webpack-demo/index.bundle.js"></script><script defer src="/webpack-demo/hot.bundle.js"></script><script defer src="/webpack-demo/client.bundle.js"></script></head>
+    <title>Tower of Dreams</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="/tower_of_dreams/index.bundle.js"></script><script defer src="/tower_of_dreams/hot.bundle.js"></script><script defer src="/tower_of_dreams/client.bundle.js"></script></head>
   <body>
   </body>
 </html>
