--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Development</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="/webpack-demo/index.bundle.js"></script><script defer src="/webpack-demo/hot.bundle.js"></script><script defer src="/webpack-demo/client.bundle.js"></script></head>
   <body>
   </body>
