--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tower of Dreams</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="/tower_of_dreams/index.bundle.js"></script><script defer src="/tower_of_dreams/hot.bundle.js"></script><script defer src="/tower_of_dreams/client.bundle.js"></script></head>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" href="/tower_of_dreams/favicon.ico"><script defer src="/tower_of_dreams/index.bundle.js"></script><script defer src="/tower_of_dreams/hot.bundle.js"></script><script defer src="/tower_of_dreams/client.bundle.js"></script></head>
   <body>
   </body>
 </html>
