--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta property="og:title" content="Tower of Dreams" />
+     <meta name="image" property="og:image" content="https://raw.githubusercontent.com/alex-ciminillo/tower_of_dreams/master/tod.png" />
+     <meta
+       property="og:description"
+       content="Fight waves of enemies and defeat floor bosses to make it to the top of the tower! The one that makes it to the top will have their greatest desire fulfilled! But how can someone become strong enough to make it to the top? By learning japanese! Each enemy, obstacle, and floor tests your japanese vocab and grammar to make sure you are strong enough to move forward!"
+     />
+     <meta
+       property="og:url"
+       content="https://alex-ciminillo.github.io/tower_of_dreams/"
+     />
     <meta charset="utf-8">
     <title>Tower of Dreams</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" href="favicon.ico"><script defer src="index.bundle.js"></script></head>
